@@ -44,8 +44,8 @@ def parse_cmdline_options(arglist):
 		  "include-filelist-stdin", "include-globbing-filelist=",
 		  "include-regexp=", "list-current-files",
 		  "no-print-statistics", "null-separator", "restore-dir=",
-		  "restore-time=", "short-filenames", "sign-key=",
-		  "verbosity="])
+		  "restore-time=", "scp-command=", "short-filenames",
+		  "sign-key=", "ssh-command=", "verbosity="])
 	except getopt.error, e:
 		command_line_error("%s" % (str(e),))
 
@@ -82,8 +82,10 @@ def parse_cmdline_options(arglist):
 			globals.restore_dir = arg
 		elif opt == "-t" or opt == "--restore-time":
 			globals.restore_time = dup_time.genstrtotime(arg)
+		elif opt == "--scp-command": backends.scp_command = arg
 		elif opt == "--short-filenames": globals.short_filenames = 1
 		elif opt == "--sign-key": set_sign_key(arg)
+		elif opt == "--ssh-command": backends.ssh_command = arg
 		elif opt == "-V":
 			print "duplicity version", str(globals.version)
 			sys.exit(0)
